[package]
name = "vesting"
version = "0.1.0"
edition = "2021"
description = "Vest tokens"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "0.16.0" }
cw2 = { version = "1.0.2" }
cosmwasm-std = { version = "1.2.1" }
cosmwasm-schema = { version = "1.2.1" }
cw-storage-plus = { version = "1.1.0" }
schemars        = "0.8.11"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = "1.0.38"
cw721-base = { version = "0.16.0", features = ["library"] }
